Bug 1502614 - Continue autoscroll animation after any main-thread scroll update (absolute or relative). r=rhunt

This matches the main thread behaviour prior to implementing APZ autoscrolling.

Differential Revision: https://phabricator.services.mozilla.com/D10778